# just_kernel

./: .gitignore  CMakeLists.txt  README.md  bochsrc.txt  grub.cfg  link.ld  utils.sh
.github/workflows/: cmake-single-platform.yml
include/: multiboot.h
include/drivers/: early_screen.h  font.h  pit.h  serial.h  vesa.h
include/drivers/char/: mem.h  tty.h
include/fs/: devfs.h  fnctl.h  fs.h  major.h  stat.h  vfs.h
include/fs/format/: bmp.h  elf.h
include/fs/ramdisk/: ramdisk.h
include/int/: dt.h  gdt.h  idt.h  isr.h
include/io/: cpuid.h  msr.h  ports.h
include/klibc/: bool.h  errno.h  llist.h  lock.h  math.h  plist.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  vector.h
include/mm/: heap.h  mm.h  pmm.h  vmm.h
include/proc/: proc.h  sched.h  syscalls.h  thread.h  v86.h
include/sys/: apic.h  core.h  core_regs.h  pic.h  smp.h  stack_trace.h  tss.h
include/sys/acpi/: acpi.h
ramdisk/: .gitignore  pack.py
ramdisk/root/: test_file
src/: boot.s  kernel.c
src/drivers/: early_screen.c  font.c  pit.c  serial.c  vesa.c
src/drivers/char/: console.c  mem.c  pty.c  tty.c
src/fs/: devfs.c  vfs.c  vfs_inode.c  vfs_namei.c  vfs_open.c  vfs_read_write.c  vfs_super.c
src/fs/elf/: elf.c
src/fs/format/: bmp.c  elf.c
src/fs/ramdisk/: ramdisk.c
src/int/: dt.c  dt_asm.s  gdt.c  idt.c  int.s  isr.c
src/io/: cpuid.c  cpuid_asm.s  msr_asm.s  ports.c
src/klibc/: lock.c  lock_asm.s  math.c  plist.c  stdio.c  stdlib.c  string.c  vector.c
src/mm/: heap.c  mm.c  pmm.c  vmm.c
src/proc/: proc.c  sched.c  syscalls.c  syscalls_asm.s  thread.c  thread_asm.s  v86.c  v86_asm.s
src/sys/: apic.c  apic_asm.s  pic.c  smp.c  smp_asm.s  stack_trace.c  tss.c
src/sys/acpi/: acpi.c  acpi_asm.s
